--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Generatore QR Code</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <div class="container">
@@ -26,15 +27,34 @@
         <!-- Griglia delle card -->
         <h3>Storico QR Code:</h3>
         <div class="card-grid">
-            {% for id, site_name in records %}
+            {% for id, site_name, url in records %}
                 <div class="card">
-                    <strong>{{ site_name }}</strong><br>
-                    <img src="{{ url_for('qrcode_img', qr_id=id) }}" alt="QR Code" width="120"><br>
+                    <div class="card-inner">
+                        <div class="card-front">
+                            <button class="toggle-btn" title="Mostra QR" onclick="toggleQR(this)">
+                                <i class="fa-solid fa-rotate"></i>
+                            </button>
+                            <div class="card-link">
+                                <a href="{{ url }}" target="_blank">
+                                    <i class="fa-solid fa-globe fa-3x"></i>
+                                </a>
+                            </div>
+                            <strong>{{ site_name }}</strong>
+                        </div>
+                        <div class="card-back">
+                            <button class="toggle-btn" title="Torna all’icona" onclick="toggleQR(this)">
+                                <i class="fa-solid fa-rotate"></i>
+                            </button>
+                            <img src="{{ url_for('qrcode_img', qr_id=id) }}" alt="QR Code" width="120">
+                            <strong>{{ site_name }}</strong>
+                        </div>
+                    </div>
                 </div>
             {% else %}
                 <div>Nessun QR code salvato.</div>
             {% endfor %}
         </div>
     </div>
+    <script src="{{ url_for('static', filename='toggle.js') }}"></script>
 </body>
 </html>
